# polymv

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  _config.yml  config.mk  extra.css  index.html  mkdocs.yml  objects.inv  polymv.c  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: build.yml  cpp-linter.yml  deploy.yml  pre-commit-check.yml
LICENSE/: index.html
docs/: LICENSE.md  README.md  index.md  test-example.md  usage.md
docs/MPSolve/: README.md
notebooks/: Untitled.ipynb  example-test.ipynb  example.ipynb  save_alms_h5.ipynb  test-example.ipynb  testing.ipynb  testing2.ipynb  usage.ipynb
polymv/: polymv.pyx
polymv/mvs/: mvs.c
repository/: fvs.c  fvs.h  mvs.c  mvs.h  polymv_C.pyx  setup.py  testing.ipynb
scripts/: create_env.sh  install_cfitsio.sh  install_chealpix.sh  install_dependencies.sh  install_gmp.sh  install_mpsolve.sh  install_nlopt.sh  install_polymv.sh
search/: search_index.json
src/: README.md  mpsolve.py  poliMV.c  polyMV  polymv.c  polymv.py  polymv.pyx  utils.pyx
src/fvs/: fvs.c  fvs.h
src/mvs/: mvs.c  mvs.h
test-example/: index.html
usage/: index.html
