[build-system]
requires = [
    "setuptools>=78.1.0",
    "cython>=3.0.12",
    "numpy>=2.2.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "polymv"
version = "2.0.0"
description = "Obtain Multipole Vectors and Frechet Vectors from Sphere"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
  {name = "Renan Alves de Oliveira", email= "fisica.renan@gmail.com"},
  {name = "Ricardo Gonzatto Rodrigues", email= "ricardo.gonzatto11@uel.br"},
]
maintainers = [
  {name = "Renan Alves de Oliveira", email= "fisica.renan@gmail.com"},
  {name = "Ricardo Gonzatto Rodrigues", email= "ricardo.gonzatto11@uel.br"},
]
keywords = [
  "multipole-vectors",
  "frechet-vectors",
  "cosmology",
  "cosmic-microwave-background",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "healpy>=1.18.1",
    "iteration-utilities>=0.13.0",
]

[project.urls]
"Homepage" = "https://github.com/oliveirara/polymv"
"Repository" = "https://github.com/oliveirara/polymv"
"Documentation" = "https://oliveirara.github.io/polymv"

[tool.setuptools]
packages = ["polymv"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff.lint.isort]
known-first-party = ["polymv"]
force-sort-within-sections = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # default configurations
    "E4", "E7", "E9"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Complex
    "C901",
    # Avoid specifying long messages outside the exception classcode
    "TRY003",
]

[tool.ruff.format]
preview = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.11",
]
